--- a/Mac learning.ipynb
+++ b/Mac learning.ipynb
@@ -110,6 +110,38 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import joblib\n",
+    "joblib.dump(neighbor,'mlbrain.joblib')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "prediction:  ['setosa', 'virginica']\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = joblib.load('mlbrain.joblib')\n",
+    "model.predict(X_test)\n",
+    "sample=[[0,0,0,0],[4,4,3,5]]\n",
+    "prediction=model.predict(sample)\n",
+    "pre_species=[iris.target_names[p] for p in prediction]\n",
+    "print('prediction: ',pre_species)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
